--- a/SimpleUploadExcelWeb/Views/File/Upload.cshtml
+++ b/SimpleUploadExcelWeb/Views/File/Upload.cshtml
@@ -7,7 +7,7 @@
 <h2>Upload</h2>
 
 <form action="~/File/SubmitUpload" enctype="multipart/form-data" method="post" >
-    <a href="~/UploadFileTemplate/@Model.FilePathAndName">下载导入模版(@Model.FileName)</a>
+    <a href="~/UploadFileTemplate/@Model.FileName">下载导入模版(@Model.FileName)</a>
     <input type="file" name="SubmitFile" />  
     <input type="hidden" name="EntityClassName" value="TestDataSourceModel" />
     <input type="submit" /> 
