--- a/SimpleUploadExcelWeb/Views/NewUploadRequirement/Upload.cshtml
+++ b/SimpleUploadExcelWeb/Views/NewUploadRequirement/Upload.cshtml
@@ -3,4 +3,4 @@
     Layout = null;
 }
 
-@{Html.RenderAction("Upload", "File", new { TemplateFileName = "TestDatasourceModelRequire-Template.xlsx", EntityClassName = "TestDataSourceModel" });}
+@{Html.RenderAction("Upload", "File", new { TemplateFileName = "TestDatasourceModelRequire-Template.xlsx", EntityClassName = "DemoEntity" });}
